// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonCompliantDisputeSteps renders the Visa compliance dispute steps 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="dispute-steps"
  >
    <div
      class="wcpay-accordion"
    >
      <div
        class="wcpay-accordion__body is-opened"
      >
        <h2
          class="wcpay-accordion__body-title"
        >
          <button
            class="components-button wcpay-accordion__body-toggle is-md is-lg"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="wcpay-accordion__arrow"
                focusable="false"
                size="24"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            <div
              class="wcpay-accordion__title-content"
            >
              Steps you can take
              <div
                class="wcpay-accordion__subtitle"
              >
                We recommend reviewing your options before responding by the deadline. 
              </div>
            </div>
          </button>
        </h2>
        <div
          class="wcpay-accordion__row"
        >
          <div
            class="dispute-steps__content"
          >
            <div
              class="dispute-steps__items"
            >
              <div
                class="dispute-steps__item"
              >
                <div
                  class="dispute-steps__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.5 7.5h-7V9h7V7.5Zm-7 3.5h7v1.5h-7V11Zm7 3.5h-7V16h7v-1.5Z"
                    />
                    <path
                      d="M17 4H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2ZM7 5.5h10a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5H7a.5.5 0 0 1-.5-.5V6a.5.5 0 0 1 .5-.5Z"
                    />
                  </svg>
                </div>
                <div
                  class="dispute-steps__item-content"
                >
                  <div
                    class="dispute-steps__item-name"
                  >
                    Accepting the dispute
                  </div>
                  <div
                    class="dispute-steps__item-description"
                  >
                    Accepting the dispute means you’ll forfeit the funds, pay the standard dispute fee, and avoid the $500 USD Visa network fee.
                  </div>
                </div>
                <div
                  class="dispute-steps__item-action"
                >
                  <a
                    class="components-button is-secondary"
                    href="https://woocommerce.com/document/woopayments/fraud-and-disputes/managing-disputes/#visa-compliance-disputes"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more 
                    ↗
                  </a>
                </div>
              </div>
              <div
                class="dispute-steps__item"
              >
                <div
                  class="dispute-steps__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3 7c0-1.1.9-2 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Zm2-.5h14c.3 0 .5.2.5.5v1L12 13.5 4.5 7.9V7c0-.3.2-.5.5-.5Zm-.5 3.3V17c0 .3.2.5.5.5h14c.3 0 .5-.2.5-.5V9.8L12 15.4 4.5 9.8Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="dispute-steps__item-content"
                >
                  <div
                    class="dispute-steps__item-name"
                  >
                    Challenge the dispute
                  </div>
                  <div
                    class="dispute-steps__item-description"
                  >
                    Challenging the dispute will incur a $500 USD Visa network fee, which is charged when you submit evidence. This fee will be refunded if you win the dispute.
                  </div>
                </div>
                <div
                  class="dispute-steps__item-action"
                >
                  <a
                    class="components-button is-secondary"
                    href="https://woocommerce.com/document/woopayments/fraud-and-disputes/managing-disputes/#visa-compliance-disputes"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more 
                    ↗
                  </a>
                </div>
              </div>
            </div>
            <div
              class="dispute-steps__notice"
            >
              <div
                class="wcpay-inline-notice wcpay-inline-info-notice dispute-steps__notice-content components-notice is-info"
              >
                <div
                  class="components-visually-hidden emotion-0 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="VisuallyHidden"
                  style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
                >
                  Information notice
                </div>
                <div
                  class="components-notice__content"
                >
                  <div
                    class="components-flex emotion-2 emotion-1"
                    data-wp-c16t="true"
                    data-wp-component="Flex"
                  >
                    <div
                      class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-4 emotion-1"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    >
                      <svg
                        class="gridicon gridicons-info-outline"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-4 emotion-1"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    >
                      <strong>
                        The outcome of this dispute will be determined by Visa.
                      </strong>
                       WooPayments has no influence over the decision and is not liable for any chargebacks.
                    </div>
                  </div>
                  <div
                    class="components-notice__actions"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotDefendableInquirySteps renders 2 steps with generic language for non-return reasons 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="dispute-steps"
  >
    <div
      class="wcpay-accordion"
    >
      <div
        class="wcpay-accordion__body is-opened"
      >
        <h2
          class="wcpay-accordion__body-title"
        >
          <button
            class="components-button wcpay-accordion__body-toggle is-md is-lg"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="wcpay-accordion__arrow"
                focusable="false"
                size="24"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            <div
              class="wcpay-accordion__title-content"
            >
              Steps you can take
              <div
                class="wcpay-accordion__subtitle"
              >
                We recommend reviewing your options before responding by the deadline. 
              </div>
            </div>
          </button>
        </h2>
        <div
          class="wcpay-accordion__row"
        >
          <div
            class="dispute-steps__content"
          >
            <div
              class="dispute-steps__items"
            >
              <div
                class="dispute-steps__item"
              >
                <div
                  class="dispute-steps__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3 7c0-1.1.9-2 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Zm2-.5h14c.3 0 .5.2.5.5v1L12 13.5 4.5 7.9V7c0-.3.2-.5.5-.5Zm-.5 3.3V17c0 .3.2.5.5.5h14c.3 0 .5-.2.5-.5V9.8L12 15.4 4.5 9.8Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="dispute-steps__item-content"
                >
                  <div
                    class="dispute-steps__item-name"
                  >
                    Contact your customer
                  </div>
                  <div
                    class="dispute-steps__item-description"
                  >
                    Identify the issue and work towards a resolution where possible.
                  </div>
                </div>
                <div
                  class="dispute-steps__item-action"
                >
                  <a
                    class="components-button is-secondary"
                    href="mailto:test@example.com?subject=Problem%20with%20your%20purchase%20from%20Test%20Store%20on%20Aug%205%2C%202026%2011%3A59%20PM%3F&body=Hello%20Test%20Customer%2C%0A%0AWe%20noticed%20that%20on%20Aug%205%2C%202026%2011%3A59%20PM%2C%20you%20raised%20a%20question%20with%20your%20payment%20provider%20about%20a%20%2450.00%20USD%20charge%20made%20on%20Aug%205%2C%202026%2011%3A59%20PM.%20We%20wanted%20to%20reach%20out%20to%20ensure%20everything%20is%20all%20right%20with%20your%20purchase%20and%20to%20see%20if%20there's%20anything%20we%20can%20do%20to%20resolve%20any%20problems%20you%20might%20have%20had.%0A%0AAlternatively%2C%20if%20this%20was%20a%20mistake%2C%20please%20contact%20your%20payment%20provider%20to%20resolve%20it.%20Thank%20you%20so%20much%20-%20we%20appreciate%20your%20business%20and%20look%20forward%20to%20working%20with%20you."
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Email customer
                  </a>
                </div>
              </div>
              <div
                class="dispute-steps__item"
              >
                <div
                  class="dispute-steps__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.5 7.5h-7V9h7V7.5Zm-7 3.5h7v1.5h-7V11Zm7 3.5h-7V16h7v-1.5Z"
                    />
                    <path
                      d="M17 4H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2ZM7 5.5h10a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5H7a.5.5 0 0 1-.5-.5V6a.5.5 0 0 1 .5-.5Z"
                    />
                  </svg>
                </div>
                <div
                  class="dispute-steps__item-content"
                >
                  <div
                    class="dispute-steps__item-name"
                  >
                    Issue a refund
                  </div>
                  <div
                    class="dispute-steps__item-description"
                  >
                    If appropriate, issue a refund to resolve the inquiry before the deadline.
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dispute-steps__notice"
            >
              <div
                class="wcpay-inline-notice wcpay-inline-info-notice dispute-steps__notice-content components-notice is-info"
              >
                <div
                  class="components-visually-hidden emotion-0 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="VisuallyHidden"
                  style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
                >
                  Information notice
                </div>
                <div
                  class="components-notice__content"
                >
                  <div
                    class="components-flex emotion-2 emotion-1"
                    data-wp-c16t="true"
                    data-wp-component="Flex"
                  >
                    <div
                      class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-4 emotion-1"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    >
                      <svg
                        class="gridicon gridicons-info-outline"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-4 emotion-1"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    >
                      <strong>
                        The outcome of this inquiry will be determined by Klarna.
                      </strong>
                       WooPayments has no influence over the decision and is not liable for any chargebacks.
                    </div>
                  </div>
                  <div
                    class="components-notice__actions"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotDefendableInquirySteps renders 3 steps with return language for credit_not_processed 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-2>* {
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

<div>
  <div
    class="dispute-steps"
  >
    <div
      class="wcpay-accordion"
    >
      <div
        class="wcpay-accordion__body is-opened"
      >
        <h2
          class="wcpay-accordion__body-title"
        >
          <button
            class="components-button wcpay-accordion__body-toggle is-md is-lg"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="wcpay-accordion__arrow"
                focusable="false"
                size="24"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12.4L12 8l5.5 4.4-.9 1.2L12 10l-4.5 3.6-1-1.2z"
                />
              </svg>
            </span>
            <div
              class="wcpay-accordion__title-content"
            >
              Steps you can take
              <div
                class="wcpay-accordion__subtitle"
              >
                We recommend reviewing your options before responding by the deadline. 
              </div>
            </div>
          </button>
        </h2>
        <div
          class="wcpay-accordion__row"
        >
          <div
            class="dispute-steps__content"
          >
            <div
              class="dispute-steps__items"
            >
              <div
                class="dispute-steps__item"
              >
                <div
                  class="dispute-steps__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3 7c0-1.1.9-2 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Zm2-.5h14c.3 0 .5.2.5.5v1L12 13.5 4.5 7.9V7c0-.3.2-.5.5-.5Zm-.5 3.3V17c0 .3.2.5.5.5h14c.3 0 .5-.2.5-.5V9.8L12 15.4 4.5 9.8Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="dispute-steps__item-content"
                >
                  <div
                    class="dispute-steps__item-name"
                  >
                    Contact your customer
                  </div>
                  <div
                    class="dispute-steps__item-description"
                  >
                    Reach out to the customer to check if they're returning the item(s).
                  </div>
                </div>
                <div
                  class="dispute-steps__item-action"
                >
                  <a
                    class="components-button is-secondary"
                    href="mailto:test@example.com?subject=Problem%20with%20your%20purchase%20from%20Test%20Store%20on%20Aug%205%2C%202026%2011%3A59%20PM%3F&body=Hello%20Test%20Customer%2C%0A%0AWe%20noticed%20that%20on%20Aug%205%2C%202026%2011%3A59%20PM%2C%20you%20raised%20a%20question%20with%20your%20payment%20provider%20about%20a%20%2450.00%20USD%20charge%20made%20on%20Aug%205%2C%202026%2011%3A59%20PM.%20We%20wanted%20to%20reach%20out%20to%20ensure%20everything%20is%20all%20right%20with%20your%20purchase%20and%20to%20see%20if%20there's%20anything%20we%20can%20do%20to%20resolve%20any%20problems%20you%20might%20have%20had.%0A%0AAlternatively%2C%20if%20this%20was%20a%20mistake%2C%20please%20contact%20your%20payment%20provider%20to%20resolve%20it.%20Thank%20you%20so%20much%20-%20we%20appreciate%20your%20business%20and%20look%20forward%20to%20working%20with%20you."
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Email customer
                  </a>
                </div>
              </div>
              <div
                class="dispute-steps__item"
              >
                <div
                  class="dispute-steps__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.5 7.5h-7V9h7V7.5Zm-7 3.5h7v1.5h-7V11Zm7 3.5h-7V16h7v-1.5Z"
                    />
                    <path
                      d="M17 4H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2ZM7 5.5h10a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5H7a.5.5 0 0 1-.5-.5V6a.5.5 0 0 1 .5-.5Z"
                    />
                  </svg>
                </div>
                <div
                  class="dispute-steps__item-content"
                >
                  <div
                    class="dispute-steps__item-name"
                  >
                    Issue a refund
                  </div>
                  <div
                    class="dispute-steps__item-description"
                  >
                    Once you've received the item(s), refund the customer before the deadline to prevent this escalating to a dispute.
                  </div>
                </div>
              </div>
              <div
                class="dispute-steps__item"
              >
                <div
                  class="dispute-steps__item-icon"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3 7c0-1.1.9-2 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Zm2-.5h14c.3 0 .5.2.5.5v1L12 13.5 4.5 7.9V7c0-.3.2-.5.5-.5Zm-.5 3.3V17c0 .3.2.5.5.5h14c.3 0 .5-.2.5-.5V9.8L12 15.4 4.5 9.8Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  class="dispute-steps__item-content"
                >
                  <div
                    class="dispute-steps__item-name"
                  >
                    Respond when the inquiry becomes a dispute
                  </div>
                  <div
                    class="dispute-steps__item-description"
                  >
                    If the returned item(s) aren't received, the inquiry may escalate to a dispute after 21 days. You can then submit evidence and challenge it (a dispute fee applies), or accept the dispute and forfeit the funds.
                  </div>
                </div>
                <div
                  class="dispute-steps__item-action"
                >
                  <a
                    class="components-button is-secondary"
                    href="https://woocommerce.com/document/woopayments/payment-methods/buy-now-pay-later/#klarna-inquiries-returns"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more 
                    ↗
                  </a>
                </div>
              </div>
            </div>
            <div
              class="dispute-steps__notice"
            >
              <div
                class="wcpay-inline-notice wcpay-inline-info-notice dispute-steps__notice-content components-notice is-info"
              >
                <div
                  class="components-visually-hidden emotion-0 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="VisuallyHidden"
                  style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
                >
                  Information notice
                </div>
                <div
                  class="components-notice__content"
                >
                  <div
                    class="components-flex emotion-2 emotion-1"
                    data-wp-c16t="true"
                    data-wp-component="Flex"
                  >
                    <div
                      class="components-flex-item wcpay-inline-notice__icon wcpay-inline-info-notice__icon emotion-4 emotion-1"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    >
                      <svg
                        class="gridicon gridicons-info-outline"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      class="components-flex-item wcpay-inline-notice__content wcpay-inline-info-notice__content emotion-4 emotion-1"
                      data-wp-c16t="true"
                      data-wp-component="FlexItem"
                    >
                      <strong>
                        The outcome of this inquiry will be determined by Klarna.
                      </strong>
                       WooPayments has no influence over the decision and is not liable for any chargebacks.
                    </div>
                  </div>
                  <div
                    class="components-notice__actions"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
